---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: same_names.md - Identical display names error messages - Class from different modules with identical names
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/same_names.md
---

# Python source files

## mdtest_snippet.py

```
1 | import a
2 | import b
3 | 
4 | df: a.DataFrame = b.DataFrame()  # error: [invalid-assignment] "Object of type `b.DataFrame` is not assignable to `a.DataFrame`"
5 | 
6 | def _(dfs: list[b.DataFrame]):
7 |     # TODO should be"Object of type `list[b.DataFrame]` is not assignable to `list[a.DataFrame]`
8 |     # error: [invalid-assignment] "Object of type `list[DataFrame]` is not assignable to `list[DataFrame]`"
9 |     dataframes: list[a.DataFrame] = dfs
```

## a.py

```
1 | class DataFrame:
2 |     pass
```

## b.py

```
1 | class DataFrame:
2 |     pass
```

# Diagnostics

```
error[invalid-assignment]: Object of type `b.DataFrame` is not assignable to `a.DataFrame`
 --> src/mdtest_snippet.py:4:1
  |
2 | import b
3 |
4 | df: a.DataFrame = b.DataFrame()  # error: [invalid-assignment] "Object of type `b.DataFrame` is not assignable to `a.DataFrame`"
  | ^^
5 |
6 | def _(dfs: list[b.DataFrame]):
  |
info: rule `invalid-assignment` is enabled by default

```

```
error[invalid-assignment]: Object of type `list[DataFrame]` is not assignable to `list[DataFrame]`
 --> src/mdtest_snippet.py:9:5
  |
7 |     # TODO should be"Object of type `list[b.DataFrame]` is not assignable to `list[a.DataFrame]`
8 |     # error: [invalid-assignment] "Object of type `list[DataFrame]` is not assignable to `list[DataFrame]`"
9 |     dataframes: list[a.DataFrame] = dfs
  |     ^^^^^^^^^^
  |
info: rule `invalid-assignment` is enabled by default

```
